# actix-paste

./: Cargo.toml  README.md
src/: main.rs
src/db/: paste.rs
