[package]
name = "actix-paste"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
mongodb = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
sha2 = "0.10.2"
futures = "0.3.21"